k8s/classroom/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classroom-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /clroom
            pathType: "Prefix"
            backend:
              service:
                name: classroom-service
                port:
                  number: 8085
